stdouts/haml-coffee
/root/Targets/haml-coffee
└─┬ haml-coffee@1.14.1 
  ├── coffee-script@1.12.7 
  ├─┬ optimist@0.6.1 
  │ ├── minimist@0.0.10 
  │ └── wordwrap@0.0.3 
  └── walkdir@0.0.12 

Setup Done exists, not setting up
:../FeatureTester/libs/:/root/Targets/haml-coffee/node_modules
Set Default Z3_PATH to ./node_modules/z3javascript/bin/libz3.so
ExpoSE Master: /root/ExpoSE/lib/Harness/src/harness.js max concurrent: 16 max paths: 1000000
Setting timeout to 900000
*** [0 done /0 queued / 1 running / 0 errors / 0% coverage ] ****** [0 done /0 queued / 1 running / 0 errors / 0% coverage ] ****** [1 done /0 queued / 0 running / 1 errors / 88% coverage ] ***
*-- Stat Module Output --*
*-- concretizations: ["defineProperty","bound log","call","join","charCodeAt","RegExp","apply","lastIndexOf","toUpperCase","pop","splice","create","reverse","sort","abs","stringify","parseFloat","SyntaxError"]
*-- Stat Module Done --*
*-- Test Case {"_bound":0} start 0.0306 took 136.6945s
*-- Errors occured in test {"_bound":0}
* Error: /root/Targets/haml-coffee/node_modules/haml-coffee/src/haml-coffee.coffee:19:3: error: invalid object key
  @VERSION: require('../package.json').version
  ^^^^^^^^
*-- Replay with NO_COMPILE=1 expoSE replay '/root/ExpoSE/lib/Harness/src/harness.js' '{"_bound":0}'
*-- Coverage Data
*- File /root/ExpoSE/lib/Harness/src/harness.js. Coverage (Term): 18% Coverage (LOC): 24%
*- File /root/ExpoSE/lib/S$/bin/symbols.js. Coverage (Term): 16% Coverage (LOC): 34%
*- File /root/Targets/haml-coffee/node_modules/haml-coffee/index.js. Coverage (Term): 89% Coverage (LOC): 100%
*- File /root/Targets/haml-coffee/node_modules/coffee-script/lib/coffee-script/coffee-script.js. Coverage (Term): 40% Coverage (LOC): 47%
*- File /root/Targets/haml-coffee/node_modules/coffee-script/lib/coffee-script/lexer.js. Coverage (Term): 76% Coverage (LOC): 84%
*- File /root/Targets/haml-coffee/node_modules/coffee-script/lib/coffee-script/rewriter.js. Coverage (Term): 88% Coverage (LOC): 91%
*- File /root/Targets/haml-coffee/node_modules/coffee-script/lib/coffee-script/helpers.js. Coverage (Term): 58% Coverage (LOC): 65%
*- File /root/Targets/haml-coffee/node_modules/coffee-script/lib/coffee-script/parser.js. Coverage (Term): 85% Coverage (LOC): 98%
*- File /root/Targets/haml-coffee/node_modules/coffee-script/lib/coffee-script/sourcemap.js. Coverage (Term): 82% Coverage (LOC): 86%
*- File /root/Targets/haml-coffee/node_modules/coffee-script/lib/coffee-script/nodes.js. Coverage (Term): 45% Coverage (LOC): 57%
*- File /root/Targets/haml-coffee/node_modules/coffee-script/lib/coffee-script/scope.js. Coverage (Term): 65% Coverage (LOC): 74%
*- File /root/Targets/haml-coffee/node_modules/coffee-script/lib/coffee-script/register.js. Coverage (Term): 76% Coverage (LOC): 77%
*- Re-run with EXPOSE_PRINT_COVERAGE=1 to print line by line coverage information
** ExpoSE Finished. 1 paths with 1 errors **
